--- a/iuvo/iuvo_app/templates/iuvo_app/base.html
+++ b/iuvo/iuvo_app/templates/iuvo_app/base.html
@@ -43,10 +43,10 @@
   {% else %}
       <div class="navbar-collapse collapse navbar-inverse-collapse">
     <ul class="nav navbar-nav">
-      <li><a href="/accounts/register">{% bootstrap_icon "thumbs-up" %} Register</a></li>
+      <li><a href="/accounts/signup/">{% bootstrap_icon "thumbs-up" %} Register</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-          <li><a href="/login/">{% bootstrap_icon "log-in" %} Login</a></li>
+          <li><a href="/accounts/login/">{% bootstrap_icon "log-in" %} Login</a></li>
     </ul>
   </div>
 </div>
