changed button in homepage.html to link to allauth signup

--- a/iuvo/iuvo_app/templates/iuvo_app/homepage.html
+++ b/iuvo/iuvo_app/templates/iuvo_app/homepage.html
@@ -13,7 +13,7 @@
       <a class="btn btn-danger btn-lg btn-block" href={% url 'iuvo_app.views.events_list_view' user.pk%}>Manage Your Reminders!</a>
       {% else %}
       <center><iframe src="//player.vimeo.com/video/91000022?title=0&amp;byline=0&amp;portrait=0" width="600" height="337" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></center>
-      <a class="btn btn-info btn-lg btn-block" href="accounts/register/">Get Started Now!</a>
+      <a class="btn btn-info btn-lg btn-block" href="accounts/signup/">Get Started Now!</a>
       {% endif %}
     </div>
   </div>
